@@ -111,12 +111,11 @@ span.span_description description:nth-child(1)		{border-top:1px solid #000;}
 result						{display:block; padding:20px 0 40px 0;}
 result:nth-child(1)			{padding-top:0;}
 result:nth-child(odd)		{border:1px solid #000; border-right:0; border-left:0;}
-result description			{display:block; padding:0 40px 20px 40px; line-height:1.5em; white-space:pre-line; unicode-bidi:embed;}
-result description			{padding:0 40px;}
-result description narrative {padding:10px 0;}
+result description			{display:block; padding:10px 40px; line-height:1.25em; white-space:pre-line; unicode-bidi:embed;}
+result description narrative{padding:10px 0;}
 result span-title			{display:block; font-size:30px; width:880px; line-height:1.25em; margin:0 auto; color:#000;}
 result span-title narrative	{display:block; padding:10px 0;}
-result:nth-of-type(1):before {content:"Results"; font-size:26px; color:#FFF; background-color:#000; display:block; padding:20px 40px; margin-bottom:25px;}
+result:nth-of-type(1):before{content:"Results"; font-size:26px; color:#FFF; background-color:#000; display:block; padding:20px 40px; margin-bottom:25px;}
 result span-title:before	{content:"RESULTS"; font-size:14px; color:#000; display:block; margin-bottom:15px;}
 result[type="1"] span-title:before	{content:"OUTPUT";}
 result[type="2"] span-title:before	{content:"OUTCOME";}
@@ -131,7 +130,7 @@ result[type="2"] indicator span-title:before {content:" "; margin:0;}
 result[type="3"] indicator span-title:before {content:" "; margin:0;}
 result[type="9"] indicator span-title:before {content:" "; margin:0;}
 
-result indicator description	{font-size:0.9em; color:#000; padding-top:10px;}
+result indicator description{font-size:0.9em; color:#000; padding-top:10px;}
 
 result indicator period		{display:block; padding-top:10px;}
 result indicator period period-start:before	{content:"Start "; font-size:14px; color:#000; display:block; padding-right:10px;}
@@ -141,6 +140,9 @@ result indicator period actual:before	{content:"Actual "; font-size:14px; color:
 
 result indicator period period-start, result indicator period period-end,
 result indicator period target, result indicator period actual	{display:inline-block; vertical-align:top; width:220px; max-width:220px; line-height:1.35em;}
+
+result indicator > baseline			{display:block;}
+result indicator > baseline comment	{display:block; color:#000; padding:10px 40px; line-height:1.25em;}
 
 
 
