@@ -371,6 +371,8 @@ result indicator description			{color:rgba(0,255,0,1);}
 result indicator period period-start:before, result indicator period period-end:before, result indicator period target:before,
 result indicator period actual:before	{color:rgba(0,204,0,1);}
 
+result indicator > baseline comment	{color:rgba(0,255,0,1);}
+
 
 /*	Sectors (also turned into graph: sector_pie)
 	============================================= */
