@@ -347,6 +347,8 @@ result indicator description			{color:rgba(255,255,255,1);}
 result indicator period period-start:before, result indicator period period-end:before, result indicator period target:before,
 result indicator period actual:before	{color:rgba(204,204,204,1);}
 
+result indicator > baseline comment	{color:rgba(255,255,255,1);}
+
 
 /*	Sectors (also turned into graph: sector_pie)
 	============================================= */
