@@ -383,6 +383,8 @@ result indicator description			{color:rgba(85,85,85,1);}
 result indicator period period-start:before, result indicator period period-end:before, result indicator period target:before,
 result indicator period actual:before	{color:rgba(136,136,136,1);}
 
+result indicator > baseline comment	{color:rgba(85,85,85,1);}
+
 
 /*	Sectors (also turned into graph: sector_pie)
 	============================================= */
